--- a/index.html
+++ b/index.html
@@ -1,1 +1,10 @@
-this is the first page of my git
+
+<html>
+<head></head>
+
+<body>
+  <h2><strong>this is the first page of my git</strong></h2>
+</body>
+
+</html>
+
