--- a/index.html
+++ b/index.html
@@ -1,10 +1,10 @@
-
+<!DOCTYPE html>
 <html>
-<head></head>
-
+<head>
+　　<meta http-equiv="content-type" content="text/html; charset=utf-8" />
+　　<title> page.title </title>
+</head>
 <body>
-  <h2><strong>this is the first page of my git</strong></h2>
+　　{{ content }}
 </body>
-
 </html>
-
