--- a/index.html
+++ b/index.html
@@ -42,6 +42,8 @@ function myFunction()
 {
     document.getElementById("demo").innerHTML="<a href='https://www.riu5.2com/index/home.html'> gg</a>";
 }
+
+myFunction();
 </script>
   
 </body>
