--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
   <div id='demo'></div>
   
   <script>
-      alert('ss')'
+      alert('ss');
 function myFunction()
 {
     document.getElementById("demo").innerHTML="<a href='https://www.riu5.2com/index/home.html'> gg</a>";
