--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
   </div>
   
   <div id='demo'>
-<button id='btn' backgroundcolor='orange'>点击前往极乐世界！</buton>
+<button id='btn' >点击前往极乐世界！</button>
   </div>
   
   <script>
