--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
 
         // 第一种 通过点击事件
         btn.onclick = function(){
-            var a=confirm("派大星多高？")
+            var a=prom("派大星多高？")
                  if(a == 'qwer')
             {
            
