--- a/index.html
+++ b/index.html
@@ -65,12 +65,12 @@
             
         }
       
-function myFunction()
+function myFunction2()
 {
     document.getElementById("demo").innerHTML="<a href='https://www.riu5.com/index/home.html'> gg</a>";
 }
 
-myFunction();
+
 </script>
   
 </body>
