--- a/index.html
+++ b/index.html
@@ -26,13 +26,13 @@
 		<div class="layui-tab">
 		
 			<ul class="layui-tab-title">
-				<li class="layui-this">文件处理类网站</li>
-				<li>资源类网站</li>
-				<li>影音下载类网站</li>
-				<li>设计类网站</li>
-				<li>搜索类网站</li>
-				<li>程序员天堂</li>
-				<li>好用软件（牛皮）</li>
+				<li class="layui-this"> <i class="layui-icon layui-icon-file"></i>文件处理类</li>
+				<li> <i class="layui-icon layui-icon-read"></i>资源类</li>
+				<li> <i class="layui-icon layui-icon-video"></i>影音下载类</li>
+				<li> <i class="layui-icon layui-icon-engine"></i>设计类</li>
+				<li> <i class="layui-icon layui-icon-search"></i>搜索类</li>
+				<li> <i class="layui-icon layui-icon-code-circle"></i>程序员天堂</li>
+				<li> <i class="layui-icon layui-icon-component"></i>好用软件（牛皮）</li>
 			</ul>
 		<div class="layui-tab-content">
 			<div class="layui-tab-item layui-show">内容1</div>
