--- a/index.html
+++ b/index.html
@@ -153,7 +153,7 @@
       ,element = layui.element; //元素操作 等等...
 
       /*layer弹出一个示例*/
-      layer.msg('欢迎访问 军哥站点');
+      layer.msg('欢迎访问 李大力的站点 欢迎收藏嗷');
     });
     </script>
 	
@@ -180,7 +180,7 @@
             }else
             {
              alert("回答错误，不许通行！");
-             location.replace('https://image.baidu.com/search/detail?ct=503316480&z=0&ipn=d&word=%E8%A1%A8%E6%83%85%E5%8C%85&hs=2&pn=1&spn=0&di=203060&pi=0&rn=1&tn=baiduimagedetail&is=0%2C0&ie=utf-8&oe=utf-8&cl=2&lm=-1&cs=1255677004%2C3755508600&os=440947170%2C1119588833&simid=3467358798%2C339158388&adpicid=0&lpn=0&ln=30&fr=ala&fm=&sme=&cg=&bdtype=0&oriquery=%E8%A1%A8%E6%83%85%E5%8C%85&objurl=http%3A%2F%2Fb-ssl.duitang.com%2Fuploads%2Fitem%2F201802%2F18%2F20180218141335_ikrHl.jpeg&fromurl=ippr_z2C%24qAzdH3FAzdH3Fooo_z%26e3B17tpwg2_z%26e3Bv54AzdH3Fks52AzdH3F%3Ft1%3Dbln9c8ccm&gsm=2&islist=&querylist=')
+             location.replace('https://www.baidu.com/s?wd=%E7%BE%8E%E5%9B%BD2%E7%94%B7%E5%AD%90%E5%96%9D%E6%B6%88%E6%AF%92%E5%89%82%E6%8A%97%E7%96%AB%E8%A2%AB%E9%80%81%E5%8C%BB')
             }
             
         }
