--- a/index.html
+++ b/index.html
@@ -271,13 +271,13 @@
 			{
 　　　　	//window.location.href="http://m.xxx.com/";
 			dv_type.innerHTML = " <i class='layui-icon layui-icon-cellphone'></i>移动设备访问";
-			//$('img').remove();
+			$('img').remove();
 			$("#left-side-navBar").attr("style","display:none;");
 			//alert("移动设备");
 			} else if(bIsAndroid != "" &  bIsAndroid != null & bIsAndroid) 
 			{
 				dv_type.innerHTML = " <i class='layui-icon layui-icon-android'></i> 安卓设备访问";
-				//$('img').remove();
+				$('img').remove();
 				$("#left-side-navBar").attr("style","display:none;");
 			}else
 			{
