--- a/index.html
+++ b/index.html
@@ -274,8 +274,8 @@
         ,content: '<div style="padding: 50px; line-height: 22px; background-color: #393D49; color: #fff; font-weight: 300;">欢迎访问开水导航！<br>在这里你会发现海量神级网站<br>工作、学习、考试、娱乐包罗万象 并且不断更新哦<br><br ><h2 style="color:#EA2901;font-family:verdana;font-style:oblique;">赶紧收藏起来吧!</h2><br></div>'
         ,success: function(layero){
           var btn = layero.find('.layui-layer-btn');
-          btn.find('.layui-layer-btn0').attr({
-            href: 'http://www.layui.com/'
+          btn.find('.layui-layer-btn1').attr({
+            href: 'https://www.zhihu.com/question/25161986'
             ,target: '_blank'
           });
         }
