--- a/index.html
+++ b/index.html
@@ -152,23 +152,23 @@
             <ul class="layui-nav layui-nav-tree" lay-filter="test">
 				<!-- 侧边导航: <ul class="layui-nav layui-nav-tree layui-nav-side"> -->
 				<li class="layui-nav-item layui-nav-itemed">
-					<a href="javascript:;">默认展开</a>
+					<a href="javascript:;">技能提升</a>
 					<dl class="layui-nav-child">
-						<dd><a href="javascript:;">选项1</a></dd>
-						<dd><a href="javascript:;">选项2</a></dd>
-						<dd><a href="">跳转</a></dd>
+						<dd><a href="javascript:;">公考</a></dd>
+						<dd><a href="javascript:;">考研</a></dd>
+						<dd><a href="">健身</a></dd>
 					</dl>
 				</li>
 				<li class="layui-nav-item">
-					<a href="javascript:;">解决方案</a>
+					<a href="javascript:;">资料查阅</a>
 					<dl class="layui-nav-child">
-						<dd><a href="">移动模块</a></dd>
-						<dd><a href="">后台模版</a></dd>
-						<dd><a href="">电商平台</a></dd>
+						<dd><a href="">公开课程</a></dd>
+						<dd><a href="">杂志资讯</a></dd>
+						<dd><a href="">博物馆</a></dd>
 					</dl>
 				</li>
-				<li class="layui-nav-item"><a href="">产品</a></li>
-				<li class="layui-nav-item"><a href="">大数据</a></li>
+				<li class="layui-nav-item"><a href="">产品/行业</a></li>
+				<li class="layui-nav-item"><a href="">行业交流</a></li>
 			</ul>
          </div>
 		  <!-- 右部内容呈现区域-->
@@ -239,6 +239,10 @@
 <script type="text/javascript">
 
 	var clientWidth = document.body.clientWidth / 4;
+	var isVisited = sessionStorage.isVisited;
+	
+
+
 	//alert(clientWidth);
     layui.use(['laydate', 'laypage', 'layer', 'table', 'carousel', 'upload', 'element'], function() {
       var laydate = layui.laydate //日期
@@ -260,8 +264,16 @@
 				//,anim: 'updown' //切换动画方式
 					});
 					
-					
-	layer.open({
+	
+	//本地存储查询是否支持 
+	if (typeof(Storage) !== "undefined") {
+    // 针对 sessionStorage 的代码
+	
+	if(typeof(isVisited) == "undefined")
+	{
+		
+		//刷新页面或未关闭浏览器情况下再次访问不弹出提示框
+		layer.open({
         type: 1
         ,title: false //不显示标题栏
         ,closeBtn: false
@@ -280,6 +292,17 @@
           });
         }
        });
+
+	}
+	
+	sessionStorage.isVisited = 1;
+	
+	} else {
+    // 抱歉！不支持 Web Storage .. 使用cookie
+	}
+
+	
+
     });
 	
 	
