--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
  <!-- 微信打开-->
  <div class="weixin-tip">
   <p>
-    <img src="live_weixin.png" alt="微信打开"/>
+    <img src="llqdk.png" alt="请在浏览器中打开"/>
   </p>
 </div>
 
