--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
   <link rel="stylesheet" type="text/css" href="https://www.layuicdn.com/layui/css/layui.css" />
   <script src="https://cdn.bootcdn.net/ajax/libs/jquery/3.5.0/jquery.js"></script>
   <script src="https://www.layuicdn.com/layui/layui.js"></script>
-  <link rel="stylesheet" href="style.css">
+  
 </head>
 <body>
  
@@ -74,7 +74,7 @@
 
 
 
- <!-- 背景动效begain-->
+ <!-- 背景动效begain
  <canvas id="canvas"></canvas>
 
   <script  src="bgEffects.js"></script>
@@ -82,7 +82,7 @@
 <div style="text-align:center;margin:50px 0; ">
  
  
-  <!-- 背景动效end-->
+  -->
 
 
  <div class="layui-container">  
