--- a/index.html
+++ b/index.html
@@ -291,7 +291,7 @@
 				<tr>
 					<td colspan="3">
 						
-						<h2>电子书/杂志/期刊/网文 搜索下载类&nbsp;<span class="layui-badge">已收录27</span></h2>
+						<h2><font color='#00F5FF'>电子书</font>/<font color='#90EE90'>杂志</font>/<font color='#FF7F00'>期刊</font>/<font color='#FF3030'>网文</font> 搜索下载类&nbsp;<span class="layui-badge">已收录27</span></h2>
 					</td>
 				</tr>
 				<tr>
@@ -367,7 +367,7 @@
 				<tr>
 					<td colspan="3">
 						
-						<h2>网盘资源搜索类&nbsp;<span class="layui-badge">已收录17</span></h2>
+						<h2><font color='#7FFFD4'>网盘资源搜索类</font>&nbsp;<span class="layui-badge">已收录17</span></h2>
 					</td>
 				</tr>
 				<tr>
