--- a/ce.html
+++ b/ce.html
@@ -47,6 +47,7 @@ clearInterval(se); }}, 2000);
     if (document.execCommand('copy')) {
         document.execCommand('copy');
         console.log('复制成功');
+	    alert('复制成功辣！快去试试叭');
     }
 })
 	</script>
