--- a/ce.html
+++ b/ce.html
@@ -3,6 +3,27 @@
 <head>
 <meta charset="utf-8">
 <title>芭鸽呀路（爱你的意思）</title>
+
+<style type="text/css">
+
+#btn{
+	font-family: "'微软雅黑','Helvetica Neue',Helvetica,Arial,sans-serif";
+	font-size: 15px!important;
+	height: 40px;
+	line-height: 18px!important;
+	padding: 3px 18px;
+	display: inline-block;
+	vertical-align: middle;
+	font-weight: normal;
+	border-radius: 3px;
+	margin: 0 8px 0 3px;
+	border: 1px solid #3383da;
+	color: #ffffff;
+	background-color: #3383da;
+	cursor: pointer;
+}
+
+</style>
 </head>
 <body>
 
@@ -33,10 +54,10 @@ clearInterval(se); }}, 2000);
 
 
 </textarea>
+</br>
 	
 	
-	
-<button id="btn">点我复制</button>
+<button id="btn"  >点我复制</button>
 	
 	
 	<script  type = text/javascript>
@@ -47,7 +68,7 @@ clearInterval(se); }}, 2000);
     if (document.execCommand('copy')) {
         document.execCommand('copy');
         console.log('复制成功');
-	    alert('复制成功辣！快去试试叭');
+		alert('复制cheng')
     }
 })
 	</script>
