--- a/ce.html
+++ b/ce.html
@@ -12,6 +12,8 @@
 	width:auto;
 	height:200px;
 	background:B0E2FF;
+	margin: 10px 10px 0 20px;
+	padding: 2px 1px 2px 10px;
 	animation:myfirst 4s;
 	-webkit-animation:myfirst 4s; /* Safari and Chrome */
 	animation-iteration-count: infinite;
@@ -39,20 +41,33 @@
 	vertical-align: middle;
 	font-weight: normal;
 	border-radius: 3px;
-	margin: 0 8px 0 3px;
+	margin: 5px 10px 0 20px;
 	border: 1px solid #3383da;
 	color: #ffffff;
 	background-color: #3383da;
 	cursor: pointer;
+}
+#demoInput{
+	
+	padding: 2px 1px 2px 10px;
+	display: inline-block;
+	vertical-align: middle;
+	font-weight: normal;
+	border-radius: 3px;
+	margin: 0 1px 0 20px;
+	border: 1px solid #3383da;
+	width:100%;
+	
+	
 }
 
 </style>
 </head>
 <body>
 <div id="animation">
-	<h1>复制代码</h1>
+	<h1>视频加速代码</h1>
 	<font color="red" >如不能自动复制 <strong>请手动复制</strong></font>
-	代码仅供测试使用，请勿作商业用途！
+	代码仅供测试使用，请勿作商业用途！<sub>(旧版已失效，更新时间2022.4.29)</sub>
 </div>
 
 </br>
